# s21_sockets

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: SockLibConfig.cmake.in
include/s21/: socket.h  ws2.h
include/socklib/: socklib.h  ws2.h
src/: socket.cc  socklib.cc  ws2.cc
tests/: CMakeLists.txt  main.cc
